<resources>
    <string name="app_name">TakeCareOfMoney</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="detail">清单</string>
    <string name="account">账户</string>
    <string name="money_report">统计</string>
    <string name="more">更多</string>
    <string name="login">登陆</string>
    <string name="logout">退出</string>
    <string name="register">注册</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="finance">理财小助手</string>
    <string name="this_month_income">本月收入</string>
    <string name="this_month_output">本月支出</string>
    <string name="budget_surplus">预算结余</string>
    <string name="budget">预算</string>
    <string name="budget_set">预算设置</string>
    <string name="record_money">记账</string>
    <string name="record_detail">详细</string>
    <string name="surplus">结余</string>
    <string name="income">收入</string>
    <string name="output">支出</string>
    <string name="total_asset">总资产</string>
    <string name="net_asset">净资产</string>
    <string name="total_liabilities">总负债</string>
    <string name="this_total_budget">本月总预算</string>
    <string name="used">已用</string>
    <string name="usable">可用</string>
    <string name="take_photo">照相</string>
    <string name="photo">相片</string>
    <string name="type">分类</string>
    <string name="food_drink">食品酒水 → 早午晚餐</string>
    <string name="cash">现金</string>
    <string name="notes">备注……</string>
    <string name="note">备注</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_user_password">请输入密码</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="user_password_again">再次输入密码</string>
    <string name="user_sex">性别</string>
    <string name="user_age">年龄</string>
    <string name="user_number">电话号码</string>
    <string name="user_sex_man">男</string>
    <string name="user_sex_women">女</string>
    <string name="input_your_word">个人说明</string>
    <string name="label_name">姓名：</string>
    <string name="label_word">个人说明：</string>
    <string name="label_age">年龄：</string>
    <string name="label_sex">性别：</string>
    <string name="label_number">电话号码：</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="search_hint">请输入搜索关键词</string>
    <string name="date">日期</string>
    <string name="look">查看</string>
    <string name="finace_list">财经列表</string>
    <string name="all_select">全选</string>
    <string name="all_unselect">全不选</string>
    <string name="close">关闭</string>


    <!--默认字符-->
    <string name="default_user_name">欢迎你,游客</string>
    <string name="default_month">4</string>
    <string name="default_year">/2016</string>
    <string name="default_money">0.00</string>
</resources>
