<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_normal"
        android:background="@color/background"
        android:paddingRight="@dimen/margin_normal"
        android:layout_height="@dimen/item_height_normal">
        <ImageView
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:src="@drawable/ic_image_back"
            android:background="@drawable/image_back_selector"
            android:id="@+id/ib_record_detail_back"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:layout_centerInParent="true"
            android:text="@string/record_detail"/>
        <ImageView
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:id="@+id/ib_record_detail_finish"
            android:src="@drawable/ic_finished"
            android:visibility="gone"
            android:background="@drawable/image_back_selector"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <!--记账输入栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_normal"
        android:paddingRight="@dimen/margin_normal"
        android:layout_height="@dimen/item_height_large">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_detail_in_out"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:text="@string/output"/>

        <!--输入框-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_detail_money"
            android:layout_toRightOf="@id/btn_detail_in_out"
            android:layout_alignParentBottom="true"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_large"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/default_money"
            android:gravity="right"
            android:textColor="@color/number_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_xlarge"
        android:paddingLeft="@dimen/margin_normal"
        android:paddingRight="@dimen/margin_normal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/photo"
            android:id="@+id/label_photo"
            android:gravity="center"/>
        <ImageView
            android:layout_width="@dimen/picture_width"
            android:layout_height="@dimen/picture_height"
            android:layout_above="@id/take_photo"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/label_photo"
            android:id="@+id/iv_detail_photo"
            android:src="@drawable/ic_camera"/>
    </RelativeLayout>

    <!--分类-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_large"
            android:id="@+id/ll_select_type"
            android:paddingLeft="@dimen/margin_normal"
            android:layout_centerInParent="true"
            android:orientation="horizontal">
            <TextView
                style="@style/label_small"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/type"/>

            <TextView
                style="@style/label"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/tv_detail_type"
                android:text="@string/food_drink"/>

        </LinearLayout>
        <TextView
            style="@style/line_horizonal"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal" />

    <!--现金-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_normal"
            android:paddingLeft="@dimen/margin_normal"
            android:orientation="horizontal">
            <TextView
                style="@style/label_small"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/account"/>
            <TextView
                style="@style/label"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/tv_detail_account"
                android:text="@string/cash"/>
        </LinearLayout>
        <TextView
            style="@style/line_horizonal"
            android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_normal"
        android:orientation="horizontal">
        <TextView
            style="@style/label_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/note"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:id="@+id/et_detail_note"
        android:minHeight="@dimen/item_height_large"
        android:background="@drawable/edit_selector"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:paddingLeft="@dimen/margin_small" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:id="@+id/ll_detail_date"
        android:padding="@dimen/margin_normal"
        android:orientation="horizontal">
        <TextView
            style="@style/label_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/date"/>
        <TextView
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/tv_detail_date"
            android:text="@string/date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_large"
            android:id="@+id/btn_detail_edit"
            android:background="@drawable/button_selector"
            android:text="@string/edit"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_large"
            android:id="@+id/btn_detail_delete"
            android:background="@drawable/button_selector"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>