<?xml version="1.0" encoding="utf-8"?>
<!--记账界面布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_normal"
        android:background="@color/background"
        android:paddingRight="@dimen/margin_normal"
        android:layout_height="@dimen/item_height_normal">
        <ImageView
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:src="@drawable/ic_image_back"
            android:background="@drawable/image_back_selector"
            android:id="@+id/ib_record_money_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:layout_centerInParent="true"
            android:text="@string/record_money"/>
        <ImageView
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:src="@drawable/ic_finished"
            android:layout_alignParentRight="true"
            android:background="@drawable/image_back_selector"
            android:id="@+id/ib_record_money_finish" />
    </RelativeLayout>
    <!--记账输入栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_normal"
        android:paddingRight="@dimen/margin_normal"
        android:layout_height="@dimen/item_height_large">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_in_out"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:text="@string/output"/>
        <RelativeLayout
            android:layout_width="@dimen/item_height_large"
            android:layout_height="@dimen/item_height_large"
            android:id="@+id/rl_take_photo"
            android:gravity="center"
            android:background="@color/red"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:layout_alignParentBottom="true"
                android:id="@+id/take_photo"
                android:text="@string/take_photo"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/iv_show_photo"
                android:src="@drawable/ic_camera"/>
        </RelativeLayout>

        <!--输入框-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_record_money"
            android:layout_toRightOf="@id/btn_in_out"
            android:layout_alignParentBottom="true"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_large"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/default_money"
            android:layout_marginRight="@dimen/margin_normal"
            android:gravity="right"
            android:textColor="@color/number_color"
            android:layout_toLeftOf="@id/rl_take_photo"/>

        <!--分割线-->
        <TextView
            style="@style/line_horizonal"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/rl_take_photo"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"/>
    </RelativeLayout>

    <!--分类-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:id="@+id/rl_record_type">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_select_type"
            android:paddingLeft="@dimen/margin_normal"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                style="@style/label_small"
                android:text="@string/type"/>

            <TextView
                style="@style/label"
                android:id="@+id/tv_record_type"
                android:text="@string/food_drink"/>

        </LinearLayout>
        <TextView
            style="@style/line_horizonal"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal" />
    </RelativeLayout>

    <!--现金-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl_select_account"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_height="@dimen/item_height_normal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/margin_normal"
            android:orientation="vertical">
            <TextView
                style="@style/label_small"
                android:text="@string/account"/>
            <TextView
                style="@style/label"
                android:id="@+id/tv_account_type"
                android:text="@string/cash"/>
        </LinearLayout>
        <TextView
            style="@style/line_horizonal"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_note"
        android:minHeight="@dimen/item_height_large"
        android:background="@drawable/edit_selector"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:paddingLeft="@dimen/margin_small"
        android:hint="@string/notes"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:gravity="center"
        android:id="@+id/tv_record_money_date"/>

</LinearLayout>